# django-test-task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
accounts/: serializers.py  urls.py  views.py
config/: settings.py  urls.py
events/: admin.py  filters.py  models.py  permissions.py  registration_views.py  serializers.py  signals.py  urls.py  views.py
events/migrations/: 0001_initial.py
