[project]
name = "django-test-task"
version = "0.1.0"
description = "Django REST API for Event Management"
requires-python = ">=3.12,<4"

dependencies = [
    "Django~=5.2.14",
    "djangorestframework~=3.17.1",
    "djangorestframework-simplejwt~=5.5.1",
    "drf-spectacular~=0.29.0",
    "django-filter~=24.3",
    "psycopg[binary]~=3.3.4",
    "gunicorn~=23.0.0",
]

[tool.uv]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]